# FlashLite-Attention

./: README.md  pyproject.toml  setup.py
benchmarks/: run_nsight.sh
src/cpp/: pytorch_bindings.cpp
src/cuda/: attention_kernels.h  cuda_utils.cuh  naive_av.cu  naive_qk.cu  naive_softmax.cu
src/python/: __init__.py  ref_attention.py
tests/: test_attention.py  test_naive_kernels.py
