[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "cuda_attention"
version = "0.1.0"
description = "CUDA Attention Implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[tool.setuptools]
packages = ["python"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
cuda = ["*.cu", "*.cuh", "*.h"]
cpp = ["*.cpp"]
